<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mainpage"
            android:title="@string/navMainPage" />
        <item
            android:id="@+id/nav_neededgames"
            android:title="@string/navMissingGames" />
        <item
            android:id="@+id/nav_ownedgames"
            android:title="@string/navOwnedGames" />
        <item
            android:id="@+id/nav_favouritegames"
            android:title="@string/navFavouriteGames" />
        <item
            android:id="@+id/nav_wishlist"
            android:title="@string/navWishList" />
        <item
            android:id="@+id/nav_shelforder"
            android:title="@string/navShelfOrder" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/navStatistics" />
        <item
            android:id="@+id/nav_finished"
            android:title="@string/navFinishedGames" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/navSettings" />
    </group>
</menu>