<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_random"
        android:icon="@drawable/controller"
        android:title="Random Game"
        app:showAsAction="always"  />
    <item
    android:id="@+id/action_search"
    android:icon="@android:drawable/ic_menu_search"
    android:title="Search"
    app:showAsAction="never" />
    <item
        android:id="@+id/action_order_alphabetic"
        android:orderInCategory="98"
        android:title="@string/action_order_alphabetic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order_price"
        android:orderInCategory="99"
        android:title="@string/action_order_price"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/title_activity_about"
        app:showAsAction="never" />
</menu>