<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.co.bossdogsoftware.nes_collection.activities.Search"
    tools:showIn="@layout/activity_search">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchSearchTerm"
        android:id="@+id/lblGame"
        android:layout_alignBaseline="@+id/txtSearch"
        android:layout_alignBottom="@+id/txtSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:layout_marginRight="5dp" />

    <EditText
        android:id="@+id/txtSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/searchHint"

        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/field_name"
        android:layout_alignStart="@+id/field_name"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionSearch"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchFieldName"
        android:id="@+id/lblField"
        android:layout_below="@+id/txtSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="5dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/field_name"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/txtSearch"
        android:layout_alignLeft="@+id/field_selection"
        android:layout_alignStart="@+id/field_selection" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/field_selection"
        android:spinnerMode="dropdown"
        android:visibility="invisible"
        android:layout_below="@+id/field_name"
        android:layout_toRightOf="@+id/lblField"
        android:layout_toEndOf="@+id/lblField"
        android:layout_marginBottom="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchAllRegions"
        android:id="@+id/chkAllRegions"
        android:layout_below="@+id/field_selection"
        android:layout_alignLeft="@+id/rgnOk"
        android:layout_alignStart="@+id/rgnOk"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchSearch"
        android:id="@+id/rgnOk"
        android:layout_below="@+id/chkAllRegions"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchCancel"
        android:id="@+id/rgnCancel"
        android:layout_below="@+id/chkAllRegions"
        android:layout_alignLeft="@+id/field_selection"
        android:layout_alignStart="@+id/field_selection" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubGenre"
        android:id="@+id/lblSubGenre"
        android:visibility="invisible"
        android:layout_below="@+id/field_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
