<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8A8A84">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/settingsWhichregion"
        android:id="@+id/lblTitle"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:background="#CCCAC7"
        android:textColor="#C4312D" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dropRegion"
        android:layout_below="@+id/lblTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editGameOk"
        android:id="@+id/rgnOk"
        android:layout_below="@+id/dropRegion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editGameCancel"
        android:id="@+id/rgnCancel"
        android:layout_alignTop="@+id/rgnOk"
        android:layout_toRightOf="@+id/rgnOk"
        android:layout_toEndOf="@+id/rgnOk" />

</RelativeLayout>