<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Fragments.SearchBoxFragment">


    <TextView
        android:id="@+id/lblGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtSearch"
        android:layout_alignBottom="@+id/txtSearch"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:text="@string/searchSearchTerm"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/field_name"
        android:layout_alignLeft="@+id/field_name"

        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/searchHint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSearch"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/searchFieldName"
        app:layout_constraintBottom_toBottomOf="@+id/field_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/field_name" />

    <Spinner
        android:id="@+id/field_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSearch"
        android:layout_alignStart="@+id/field_selection"
        android:layout_alignLeft="@+id/field_selection"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSearch" />

    <TextView
        android:id="@+id/lblSubGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/SubGenre"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/field_selection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/field_selection" />

    <Spinner
        android:id="@+id/field_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_name"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/lblField"
        android:layout_toRightOf="@+id/lblField"
        android:spinnerMode="dropdown"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_name" />

    <CheckBox
        android:id="@+id/chkAllRegions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_selection"
        android:layout_alignStart="@+id/rgnOk"
        android:layout_alignLeft="@+id/rgnOk"
        android:layout_marginTop="16dp"
        android:text="@string/searchAllRegions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_selection" />

    <Button
        android:id="@+id/rgnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkAllRegions"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/searchSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkAllRegions" />

    <Button
        android:id="@+id/rgnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkAllRegions"
        android:layout_alignStart="@+id/field_selection"
        android:layout_alignLeft="@+id/field_selection"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/searchCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rgnOk"
        app:layout_constraintTop_toBottomOf="@+id/chkAllRegions" />


</androidx.constraintlayout.widget.ConstraintLayout>